# openergo

./: .coverage  .graph.gv  BACKLOG.md  NOTES.md  clean.sh  dev-requirements.txt  lint.sh  pyproject.toml  setup.cfg  setup.py
example/deploy/: .graph.gv  camelcaser.json  concatenater.json  quoter.json  reverser.json  snakecaser.json  uppercaser.json
example/src/: .graph.gv
example/src/.spool/camelcase/: setup.py
example/src/.spool/camelcase/camelcase/: __main__.py
example/src/camelcase/: __main__.py
example/src/concatenate/: __main__.py
example/src/reverse/: __main__.py
example/src/serialize/: __main__.py
example/src/snakecase/: __main__.py
example/src/uppercase/: __main__.py
openergo/: KeyStore.py  bash_operation.py  cli.py  cli_classes.py  colors.py  executor.py  graph.py  openergo_cli.py  openergo_click.py  openergo_cmd.py  python_executor.py  quality.py  spooler.py  utility.py
test/: test_rabbitmq_connection.py
tests/unit/: test_python_executor.py  test_spooler.py
tests/unit/utility/: test_compression.py  test_datamanipulation.py  test_deep_ops.py  test_encryption.py  test_safecast.py  test_serialization.py  test_stream.py  test_stringify.py  test_traversal.py  test_traverse_datastructures.py  test_utility.py
tests_for_later/integration/: _test_integration.py
tests_for_later/unit/: _test_complete.py
