[metadata]
name = openergo
version = 0.0.1
description = Project for service bus
long_description_content_type = text/markdown

[options]
packages = find:
install_requires =
    pyyaml
    pydash
    dill
    graphviz
    cryptography
    line-profiler
    click
    ansicolors
    click-default-group
